Update Sales prediction with simple linear regression.ipynb

--- a/Sales prediction with simple linear regression.ipynb
+++ b/Sales prediction with simple linear regression.ipynb
@@ -801,7 +801,8 @@
    "id": "d895b7cc",
    "metadata": {},
    "source": [
-    "**In the simple linear regression model, the y-intercept is 41.5326 and the slope is 8.1733. Interpretation: If a company has a budget of 1 million dollars more for promoting their products/services on the radio, the company's sales would increase by 8.1733 million dollars on average.**"
+    "**In the simple linear regression model, the y-intercept is 41.5326 and the slope is 8.1733. 
+       Interpretation: If a company has a budget of 1 million dollars more for promoting their products/services on the radio, the company's sales would increase by 8.1733 million dollars on average.**"
    ]
   }
  ],
