--- a/Python Projects/London Bike Sharing + Visualization/Data Exploring and Manipulating notebook.ipynb
+++ b/Python Projects/London Bike Sharing + Visualization/Data Exploring and Manipulating notebook.ipynb
@@ -10,6 +10,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b9db0760",
+   "metadata": {},
+   "source": [
+    "## Dashboard:\n",
+    "https://public.tableau.com/app/profile/maksym.smirnov/viz/LondonBikeRides_17046775792570/Dashboard"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8bbc6808",
+   "metadata": {},
+   "source": [
+    "### Load Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "1b02a663",
@@ -35,7 +52,7 @@
    "id": "3f23935d",
    "metadata": {},
    "source": [
-    "## Explore Data"
+    "### Explore Data"
    ]
   },
   {
